<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.onboarding.OnboardingActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/splash_app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="@dimen/_24sdp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crypto_market"
            android:textFontWeight="700"
            android:textAppearance="@style/crypto_market"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/m"
            android:textFontWeight="700"
            android:textAppearance="@style/m"
            />
    </androidx.appcompat.widget.LinearLayoutCompat>
    <View
        android:id="@+id/shape_1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/slash_img"
        android:layout_marginStart="@dimen/_37sdp"
        app:layout_constraintTop_toBottomOf="@id/splash_app_name"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintHeight_percent=".4"
        app:layout_constraintHeight_default="percent"
        />

    <TextView
        android:id="@+id/splash_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/shape_1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="@dimen/_24sdp"
        android:textFontWeight="600"
        android:text="@string/splash_label"
        android:textAppearance="@style/splash_label"
        android:lineSpacingExtra="0sp"
        />
    <TextView
        android:id="@+id/splash_sub_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/splash_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textFontWeight="500"
        android:layout_marginTop="@dimen/_24sdp"
        android:layout_marginLeft="@dimen/_24sdp"
        android:text="@string/splash_sub_label"
        android:textAppearance="@style/splash_sub_label"
        android:lineSpacingExtra="0sp"
        />
    <TextView
        android:id="@+id/splash_get_started"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/rounded_corner"
        android:textFontWeight="500"
        android:padding="@dimen/_14sdp"
        android:text="@string/get_started"
        android:textAppearance="@style/get_started"
        android:textAlignment="center"
        android:layout_marginHorizontal="@dimen/_24sdp"
        android:layout_marginBottom="@dimen/_36sdp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>