<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingVertical="@dimen/_8sdp"
    android:background="@drawable/content_bg">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="6">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/_24h"
            android:textSize="@dimen/_11ssp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/_7d"
            android:textSize="@dimen/_11ssp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/_14d"
            android:textSize="@dimen/_11ssp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/_30d"
            android:textSize="@dimen/_11ssp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/_60d"
            android:textSize="@dimen/_11ssp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/_1y"
            android:textSize="@dimen/_11ssp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:layout_weight="1"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/black"
        android:layout_marginVertical="@dimen/_4sdp"/>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ll_percents"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="6">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/ll_24h_percent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">
            <ImageView
                android:id="@+id/iv_24h_percent"
                android:layout_width="@dimen/_12sdp"
                android:layout_height="@dimen/_12sdp"
                android:src="@drawable/ic_arrow_up_24" />
            <TextView
                android:id="@+id/tv_24h_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/limeade"
                android:textSize="@dimen/_11ssp"
                android:text="2.5%" />
        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/ll_7d_percent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">
            <ImageView
                android:id="@+id/iv_7d_percent"
                android:layout_width="@dimen/_12sdp"
                android:layout_height="@dimen/_12sdp"
                android:src="@drawable/ic_arrow_up_24" />
            <TextView
                android:id="@+id/tv_7d_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/limeade"
                android:textSize="@dimen/_11ssp"
                android:text="2.5%" />
        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/ll_14d_percent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">
            <ImageView
                android:id="@+id/iv_14d_percent"
                android:layout_width="@dimen/_12sdp"
                android:layout_height="@dimen/_12sdp"
                android:src="@drawable/ic_arrow_up_24" />
            <TextView
                android:id="@+id/tv_14d_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/limeade"
                android:textSize="@dimen/_11ssp"
                android:text="2.5%" />
        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/ll_30d_percent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">
            <ImageView
                android:id="@+id/iv_30d_percent"
                android:layout_width="@dimen/_12sdp"
                android:layout_height="@dimen/_12sdp"
                android:src="@drawable/ic_arrow_up_24" />
            <TextView
                android:id="@+id/tv_30d_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/limeade"
                android:textSize="@dimen/_11ssp"
                android:text="2.5%" />
        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/ll_60d_percent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">
            <ImageView
                android:id="@+id/iv_60d_percent"
                android:layout_width="@dimen/_12sdp"
                android:layout_height="@dimen/_12sdp"
                android:src="@drawable/ic_arrow_up_24" />
            <TextView
                android:id="@+id/tv_60d_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/limeade"
                android:textSize="@dimen/_11ssp"
                android:text="2.5%" />
        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/ll_1y_percent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">
            <ImageView
                android:id="@+id/iv_1y_percent"
                android:layout_width="@dimen/_12sdp"
                android:layout_height="@dimen/_12sdp"
                android:src="@drawable/ic_arrow_up_24" />
            <TextView
                android:id="@+id/tv_1y_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/limeade"
                android:textSize="@dimen/_11ssp"
                android:text="2.5%" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>