<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".view.ui.main.SearchFragment">
    <EditText
        android:id="@+id/edt_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/content_bg"
        android:paddingVertical="@dimen/_8sdp"
        android:paddingHorizontal="@dimen/_12sdp"
        android:layout_marginVertical="@dimen/_8sdp"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:hint="@string/search_for_a_coin"
        android:textColor="@color/white"
        android:textSize="@dimen/_11ssp"
        android:textColorHint="@color/white_40"
        android:drawableStart="@drawable/ic_search_24"
        android:drawableTint="@color/white_40" />
    <include
        android:id="@+id/lo_error"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        layout="@layout/layout_error" />
    <include
        android:id="@+id/shm_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        layout="@layout/search_shimmer" />
    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsv_history_trending"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:fillViewport="true">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/ll_history_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:id="@+id/tv_search_history"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/history"
                    android:textSize="@dimen/_11ssp"
                    android:textFontWeight="600"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginStart="@dimen/_12sdp"/>
                <TextView
                    android:id="@+id/tv_history_clear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/clear_all"
                    android:textSize="@dimen/_11ssp"
                    android:textAlignment="textEnd"
                    android:textFontWeight="600"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_12sdp"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
            <FrameLayout
                android:id="@+id/frm_search_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/content_bg"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:layout_marginVertical="@dimen/_8sdp">
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_search_history"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false"/>
            </FrameLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/trending_search"
                android:textSize="@dimen/_11ssp"
                android:textFontWeight="600"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginStart="@dimen/_12sdp"/>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/content_bg"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:layout_marginVertical="@dimen/_8sdp">
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_trending_search"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false"/>
            </FrameLayout>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsv_searching"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:fillViewport="true">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/coins"
                android:textSize="@dimen/_11ssp"
                android:textFontWeight="600"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginStart="@dimen/_12sdp"/>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/content_bg"
                android:orientation="vertical"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:layout_marginVertical="@dimen/_8sdp">
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_searching"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false"/>
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/ll_load_more_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_1sdp"
                        android:background="@color/white_40" />
                    <TextView
                        android:id="@+id/tv_load_more"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Load more coins"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_11ssp"
                        android:gravity="center"
                        android:paddingVertical="@dimen/_8sdp"/>
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>